--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="dialog_button_delete">Удалить</string>
     <string name="dialog_button_cancel">Отмена</string>
     <string name="device_name_hint">Название счётчика</string>
+    <string name="menu_rate">Оценить приложение</string>
 
 </resources>
